cmake_minimum_required(VERSION 3.15)
set(EXPORT_NAME NeapuBase)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions(NEAPU_BASE_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
aux_source_directory(. SRC_FILES)
aux_source_directory(sha SHA_SRC_FILES)
aux_source_directory(base64 BASE64_SEC_FILES)
add_library(${EXPORT_NAME} SHARED ${SRC_FILES} ${SHA_SRC_FILES} ${BASE64_SEC_FILES})
target_link_libraries(${EXPORT_NAME} PUBLIC Logger)
install(TARGETS ${EXE_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})