cmake_minimum_required(VERSION 3.15)
project(NeapuBase)
if (WIN32)
	add_compile_definitions(NEAPU_BASE_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "*.cpp" "*.c")
add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEAD_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC Logger)
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})