set(EXE_NAME neapuhttp)
include_directories("../base" "../network")
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions(NEAPU_HTTP_EXPORTS)
endif()
add_library(${EXE_NAME} SHARED   "NEHttpServer.h" "NEHttpServer.cpp"   "NERouter.h" "NERouter.cpp" "NEHttpPublic.h" "NEHttpHandle.h" "NEHttpHandle.cpp")
target_link_libraries(${EXE_NAME} PUBLIC neapubase neapunetwork ${LIBEVENT_CORE})