set(EXE_NAME NeapuHttp)
include_directories("../base" "../network")
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions(NEAPU_HTTP_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
add_library(${EXE_NAME} SHARED   "NEHttpServer.h" "NEHttpServer.cpp"   "NERouter.h" "NERouter.cpp" "NEHttpPublic.h" "NEHttpHandle.h" "NEHttpHandle.cpp")
target_link_libraries(${EXE_NAME} PUBLIC NeapuNetwork NeapuBase)
install(TARGETS ${EXE_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})