project(NeapuHttp)
include_directories("../base" "../network")
if (WIN32)
	add_compile_definitions(NEAPU_HTTP_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "*.cpp" "*.c")
add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC NeapuNetwork NeapuBase)
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})