set(EXE_NAME NeapuRedisConnector)
include_directories("../base" "../network")
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_compile_definitions(NEAPU_READ_CONNECTOR_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
add_library(${EXE_NAME} SHARED "NERedisConnector.h" "NERedisConnector.cpp" "NERedisPublic.h")
target_link_libraries(${EXE_NAME} PUBLIC NeapuBase NeapuNetwork)
install(TARGETS ${EXE_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})