set(EXE_NAME NeapuRedisConnector)
include_directories("../base" "../network")
if (WIN32)
	add_compile_definitions(NEAPU_READ_CONNECTOR_EXPORTS)
endif()
file(GLOB HEAD_FILES "./*.h")
file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "*.cpp" "*.c")
add_library(${EXE_NAME} SHARED ${SRC_FILES})
target_link_libraries(${EXE_NAME} PUBLIC NeapuBase NeapuNetwork)
install(TARGETS ${EXE_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HEAD_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})